packages/next-swc/crates/core/tests/errors/next-font-loaders/spread-arg/output.js
import inter from "@next/font/google?pages/test.tsx;Inter;{};[]";
const a = fn(...{}, ...[]);
